Update github page url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Conway's Game of Life</title>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://pages.github.com/sbutler2901/wasm-game-of-life/www/build/">
+    <meta http-equiv="refresh" content="0; url=https://sbutler2901.github.io/wasm-game-of-life/www/build">
 </head>
 <body>
 
